css/styles.css
#loader {
	background: #0e1624 url('../img/logo.svg') no-repeat center;
	background-size: 60px;
	background-color: var(--clr-dark);
	height: 100vh;
	width: 100%;
	position: fixed;
	z-index: 100;
}

/* GLOBAL STYLES */
*,
*::before,
*::after {
	box-sizing: border-box;
}

:root {
	--ff-primary: 'Space Grotesk', sans-serif;
	--clr-light: #fff;
	--clr-mid-light: #74bdcb;
	--clr-dark: #1e1e1e;
}

/* GENERAL STYLES */

html {
	scroll-behavior: smooth;
}

body {
	padding: 0;
	margin: 0;
	font-family: var(--ff-primary);
	overflow-x: hidden;
}

/* NAVBAR */

.hero {
	overflow: hidden;
	background-image: url('../img/desk.jpg');
	background-repeat: no-repeat;
	background-size: cover;
	background-position: center center;
	height: 100vh;
}

.logo__img {
	width: 60px;
}

.nav {
	display: flex;
	background-color: var(--clr-dark);
	padding: 25px;
	position: fixed;
	width: 100%;
	font-weight: 700;
	z-index: 1;
}

.navbar {
	display: flex;
	width: 100%;
	justify-content: flex-end;
	align-items: center;
}

.nav__list {
	display: flex;
}

.nav__item {
	list-style-type: none;
}

.nav__link {
	font-family: var(--ff-primary);
	font-size: 1.25rem;
	margin-left: 40px;
}

.nav__link:hover {
	color: var(--clr-mid-light);
	transition: color 0.3s ease-in-out;
}

a {
	text-decoration: none;
	-webkit-tap-highlight-color: transparent;
}

a:visited,
a:link {
	color: var(--clr-light);
}

.nav__link--contact {
	border: 1px solid var(--clr-light);
	padding: 5px 10px;
	border-radius: 25px;
}

.nav__link--contact:hover {
	border: 1px solid var(--clr-mid-light);
	background-color: var(--clr-mid-light);
	padding: 5px 10px;
	border-radius: 25px;
	transition: all 0.3s ease-in-out;
	color: var(--clr-dark);
}

/* HAMBURGER  */

.hamburger-menu {
	display: none;
}

.hamburger-menu:focus {
	color: none;
}

/* HERO SECTION */

.hero-container {
	color: var(--clr-light);
	width: 100%;
	max-width: 1600px;
	margin: 0 auto;
	height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: center;
	padding-left: 40px;
}

h2 {
	font-size: clamp(1rem, 3vw, 4rem);
	font-weight: 400;
	margin: 0;
}

h1 {
	font-size: clamp(2rem, 6vw, 7rem);
	margin-top: 15px;
	margin-bottom: 15px;
}

.learn-more {
	border: 1px solid var(--clr-light);
	border-radius: 20px;
	padding: 10px;
	width: auto;
	max-width: 300px;
	text-align: center;
	font-size: 1rem;
	margin-right: 20px;
}

.learn-more:hover {
	border: 1px solid var(--clr-dark);
	background-color: var(--clr-light);
}

.learn-more:hover a {
	color: var(--clr-dark);
	transition: all 0.3s ease-in-out;
}

.arrows {
	width: 60px;
	height: 72px;
	position: relative;
	left: 115px;
	margin-top: 10px;
}

.arrows path {
	stroke: #fff;
	fill: transparent;
	stroke-width: 1.5px;
	animation: arrow 2s infinite;
}

@keyframes arrow {
	0% {
		opacity: 0;
	}
	40% {
		opacity: 1;
	}
	80% {
		opacity: 0;
	}
	100% {
		opacity: 0;
	}
}

.arrows path.a1 {
	animation-delay: -1s;
}

.arrows path.a2 {
	animation-delay: -0.5s;
}

.arrows path.a3 {
	animation-delay: 0s;
}

/* ABOUT SECTION */

.about {
	width: 100%;
	max-width: 1600px;
	margin: 0 auto;
	color: var(--clr-dark);
	scroll-margin-top: 6em;
}

.about-title {
	text-align: center;
	font-size: 4rem;
	padding-top: 30px;
}

.about-title::after {
	content: '';
	margin: 0 auto;
	margin-top: 5px;
	display: block;
	height: 5px;
	width: 150px;
	background: var(--clr-mid-light);
	left: 50%;
	border-radius: 5px;
}

.about-section {
	display: flex;
	justify-content: space-around;
	gap: 100px;
}

.about-text {
	line-height: 1.5;
	max-width: 50ch;
	font-size: 1.25rem;
	padding-left: 40px;
}

.about-break {
	content: '';
	display: block;
	margin: 10px 0px;
}

.cv {
	display: flex;
	justify-content: center;
}

.cv-doc {
	color: var(--clr-dark) !important;
	font-weight: 700;
	border-radius: 20px;
	width: 1000px;
	padding: 5px;
	max-width: 250px;
	text-align: center;
	font-size: 1rem;
	margin-bottom: 30px;
	border: 1px solid var(--clr-dark);
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.cv-doc:visited {
	color: var(--clr-dark) !important;
}

.cv-doc:hover {
	background-color: var(--clr-dark);
	color: var(--clr-light) !important;
	transition: all 0.2s ease-in-out;
}

.tools-title {
	font-size: 1.75rem;
	text-align: center;
}

div > h3 {
	margin-top: 0;
}

.tools {
	padding-right: 40px;
}

.tools-icons {
	display: flex;
	flex-wrap: wrap;
	gap: 15px;
	text-align: center;
	justify-content: center;
}

.tools-img {
	width: 55px;
}

img ~ p {
	font-weight: 700;
}

/* PROJECTS */

.projects {
	width: 100%;
	margin: 0 auto;
	color: var(--clr-dark);
	background-color: #f9f9f9;
	scroll-margin-top: 6em;
}

.project-section {
	max-width: 1600px;
	width: 100%;
	margin: 0 auto;
	padding: 0 40px 30px;
}

.projects-title {
	text-align: center;
	font-size: 4rem;
	padding-top: 30px;
	margin-bottom: 100px;
}

.projects-title::after {
	content: '';
	margin: 0 auto;
	margin-top: 10px;
	display: block;
	height: 5px;
	width: 150px;
	background: var(--clr-mid-light);
	left: 50%;
	border-radius: 5px;
}

.project {
	display: flex;
	justify-content: center;
	gap: 50px;
	margin-bottom: 100px;
}

.project-img {
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.project-img-container {
	max-width: 50%;
}

.project-img {
	width: 700px;
	border-radius: 20px;
}

.project-text > h3 {
	font-size: 1.5rem;
	text-align: center;
}

.project-text {
	line-height: 1.5;
	max-width: 50ch;
	font-size: 1.25rem;
}

.project-links {
	display: flex;
	justify-content: center;
	gap: 20px;
}

.feather:hover {
	color: var(--clr-mid-light);
}

.project-link:hover {
	transition: all 0.2s ease-in-out;
	transform: scale(1.1);
}

.feather {
	width: 40px;
	color: var(--clr-dark);
}

/* CONTACT SECTION */

.contact {
	max-width: 1600px;
	width: 100%;
	margin: 0 auto;
	padding: 0;
	scroll-margin-top: 6em;
}

.contact-title {
	text-align: center;
	font-size: 4rem;
	padding-top: 30px;
	margin-bottom: 100px;
}

.contact-title::after {
	content: '';
	margin: 0 auto;
	margin-top: 10px;
	display: block;
	height: 5px;
	width: 150px;
	background: var(--clr-mid-light);
	left: 50%;
	border-radius: 5px;
}

.form-container {
	display: flex;
	justify-content: center;
	box-shadow: 0 5px 15px 0 rgb(0 0 0 / 15%);
	width: 85%;
	margin: 0 auto;
	padding: 50px;
}

form {
	display: flex;
	justify-content: center;
	flex-direction: column;
	width: 100%;
	margin: 0 auto;
}

.form__group--item {
	margin: 0 auto;
	width: 85%;
}

input,
textarea {
	width: 100%;
	border: none;
	padding: 5px 5px 15px;
	border-bottom: 2px solid var(--clr-dark);
	margin-bottom: 10px;
	font-size: 1rem;
	font-family: var(--ff-primary);
	resize: none;
}

textarea {
	height: auto;
}

.form__item:focus {
	outline: none;
	border-bottom: 3px solid var(--clr-mid-light);
}

.form__item::placeholder {
	color: var(--clr-dark);
	font-family: var(--ff-primary);
	font-size: 1rem;
	opacity: 0.5;
}

.btn {
	width: 150px;
	height: 45px;
	font-size: 0.75rem;
	letter-spacing: 2px;
	font-weight: 700;
	color: #fff;
	background-color: var(--clr-dark);
	border: none;
	border-radius: 45px;
	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
	transition: all 0.3s ease 0s;
	cursor: pointer;
	outline: none;
	margin: 20px auto auto;
}

.btn:hover {
	background-color: #2ee59d;
	color: var(--clr-dark);
	border: none;
	box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
	transform: translateY(-7px);
}

.form__group--item.success textarea {
	border-color: #09c372;
}

.form__group--item.success input {
	border-color: #09c372;
}

.form__group--item.error textarea {
	border-color: #ff3860;
}

.form__group--item.error input {
	border-color: #ff3860;
}

.error {
	color: #ff3860;
	margin-bottom: 10px;
}

/* FOOTER SECTION */

.footer {
	min-height: 295px;
	margin: 150px auto auto;
	width: 100%;
	background-image: url('../img/desk.2.jpg');
	background-position: center;
	background-repeat: no-repeat;
	background-size: cover;
}

.footer__links {
	display: flex;
	justify-content: center;
	align-items: center;
	margin-bottom: 0;

	position: relative;
	top: 80px;
}

.footer__link {
	margin-top: 25px;
}

.footer__item:hover {
	color: var(--clr-mid-light);
	transition: color 0.3s ease-in-out;
}

.footer__item {
	color: var(--clr-light);
	margin: 15px;
}

.copyright {
	color: var(--clr-light);
	text-align: center;
	position: relative;
	top: 80px;
}

.copyright__text {
	margin: 0;
}

/* CONFIRMATION MODAL */

.modal {
	display: none;
	position: fixed;
	width: 100%;
	height: 100%;
	font-weight: 700;
	top: 23%;
	justify-content: center;
	max-height: 210px;
	text-align: center;
}

.success-message {
	background-color: var(--clr-light);
	max-width: 60%;
	border-radius: 20px;
	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.success-title {
	font-size: 2rem;
	padding: 0 20px;
	margin-bottom: 20px;
}

.check {
	color: #09c372;
	position: relative;
	top: -10%;
}

/* Intersection Animation */

.right-name {
	opacity: 0;
	filter: blur(5px);
	transition: all 3s;
	transform: translateX(100%);
}

.right {
	opacity: 0;
	filter: blur(5px);
	transition: all 1s;
	transform: translateX(100%);
}

.right-img {
	opacity: 0;
	filter: blur(5px);
	transition: all 1.5s;
	transform: translateX(100%);
}

.left {
	opacity: 0;
	filter: blur(5px);
	transition: all 1.5s;
	transform: translateX(-100%);
}

.text-scale {
	opacity: 0;
	filter: blur(5px);
	transition: all 1s;
	transform: scale(0.5);
}

.tools-item:nth-child(1) {
	transition-delay: 2000ms;
}
.tools-item:nth-child(2) {
	transition-delay: 1800ms;
}
.tools-item:nth-child(3) {
	transition-delay: 1600ms;
}
.tools-item:nth-child(4) {
	transition-delay: 1400ms;
}
.tools-item:nth-child(5) {
	transition-delay: 1200ms;
}
.tools-item:nth-child(6) {
	transition-delay: 1000ms;
}
.tools-item:nth-child(7) {
	transition-delay: 800ms;
}
.tools-item:nth-child(8) {
	transition-delay: 600ms;
}
.tools-item:nth-child(9) {
	transition-delay: 400ms;
}
.tools-item:nth-child(10) {
	transition-delay: 200ms;
}

.show-text {
	opacity: 1;
	filter: blur(0);
	transform: scale(1);
}

.show {
	opacity: 1;
	filter: blur(0);
	transform: translateX(0);
}

/* Media Queries */
@media (max-width: 950px) {
	.logo__img {
		width: 40px;
		margin-top: 1px;
	}

	.hamburger-menu {
		margin: 1rem 2rem 2rem 2rem;
		display: flex;
		flex-flow: column wrap;
		justify-content: space-between;
		height: 2.3rem;
		width: 2.5rem;
		cursor: pointer;
		position: absolute;
		right: 0;
		top: 0;
		-webkit-tap-highlight-color: transparent;
	}
	.bar-top,
	.bar-middle,
	.bar-bottom {
		height: 4px;
		background: #fff;
		border-radius: 5px;
		margin: 3px 0;
		transform-origin: left;
		transition: all 0.5s;
	}

	.nav {
		padding: 15px;
	}

	.navbar {
		display: none;
	}

	.sidebar {
		display: flex;
		width: 80%;
	}

	.nav__list {
		position: absolute;
		right: 0;
		margin-top: 0;
		background: var(--clr-dark);
		flex-direction: column;
		top: 70px;
		text-align: right;
		height: 100vh;
		padding: 0;
		width: 200px;
	}

	.nav__item {
		margin: 20px 40px 20px 0;
	}

	.nav__link {
		border: none;
		padding: 0;
	}
}

@media (max-width: 1150px) {
	.projects-title {
		margin-bottom: 50px;
	}
	.project {
		flex-direction: column;
		align-items: center;
		margin-bottom: 50px;
	}
	.project-2 {
		flex-direction: column-reverse;
	}
	.project-text {
		max-width: 85%;
		text-align: justify;
		margin-bottom: 20px;
	}
	.project-img {
		width: 100%;
	}
	.project-text > h3 {
		margin-top: 0;
	}
}

@media (max-width: 1150px) {
	.about-section {
		flex-direction: column;
		gap: 0;
	}
	.about-text {
		max-width: 50ch;
		width: 80%;
		margin: 0 auto;
		padding-left: 0;
	}
	.tools {
		margin: 0 auto;
		padding: 0;
		width: 80%;
	}
	div > h3 {
		margin-top: 20px;
	}
}

@media (max-width: 950px) {
	.form__group--item {
		width: 100%;
	}
}

